test/libsolidity/syntaxTests/inlineAssembly/function_call_not_found.sol
contract C {
  function f() public pure {
    assembly {
      k()
    }
  }
}
// ----
// DeclarationError: (63-64): Function not found.
